--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
 
         <div class="passo" id="passo-11">
-            <img src="img/cenario-passo11-cidade-perdida.png" alt="encontrando uma cidade maravilhosa perdida no Amazonas">
+            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ffemascheti.github.io%2Fcriando-sua-aventura%2F&psig=AOvVaw1qDYjAAzkQ7VfKBTwRBZzl&ust=1759490187299000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCMiL1_KxhZADFQAAAAAdAAAAABAE" alt="encontrando uma cidade maravilhosa perdida no Amazonas">
             <p>Dentro da cidade perdida, você descobre tesouros inimagináveis e decide se dedicar a estudar e preservar
                 este lugar</p>
         </div>
